Refactor tests: Remove obsolete tests and add new ones for entity lookup and sample IDs
- Deleted tests for build_cached_sample_dump, build_quickwit_index, end_to_end_small_sample, evaluate_cached_typing, quickwit_client, and wikidata_sample_cache.
- Added new tests for entity lookup functionality, including normalization and candidate reranking.
- Introduced tests for resolving and defaulting sample QIDs in wikidata_sample_ids.
- Added tests for building Elasticsearch index with bulk payloads.

--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,10 @@ data/input/*
 !data/input/.gitkeep
 data/output/*
 !data/output/.gitkeep
-data/quickwit/*
-!data/quickwit/.gitkeep
-data/cache/*
-!data/cache/.gitkeep
+data/elasticsearch/*
+!data/elasticsearch/.gitkeep
+data/postgres/*
+!data/postgres/.gitkeep
 artifacts/
 *.sqlite
 *.sqlite3
