--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,44 @@
 services:
-  quickwit:
-    image: quickwit/quickwit:${ALPACA_QUICKWIT_VERSION:-0.8.1}
-    command: ["run"]
+  postgres:
+    image: postgres:${ALPACA_POSTGRES_VERSION:-18.1}
+    pull_policy: always
+    environment:
+      POSTGRES_DB: ${ALPACA_POSTGRES_DB:-alpaca}
+      POSTGRES_USER: ${ALPACA_POSTGRES_USER:-postgres}
+      POSTGRES_HOST_AUTH_METHOD: trust
     ports:
-      - "${ALPACA_QUICKWIT_PORT:-7280}:7280"
+      - "${ALPACA_POSTGRES_PORT:-5432}:5432"
     volumes:
       - type: bind
-        source: ${ALPACA_QUICKWIT_DATA_DIR:-./data/quickwit}
-        target: /quickwit/qwdata
+        source: ${ALPACA_POSTGRES_DATA_DIR:-./data/postgres}
+        target: /var/lib/postgresql
+
+  elasticsearch:
+    image: elastic/elasticsearch:${ALPACA_ELASTICSEARCH_VERSION:-9.3.0}
+    pull_policy: always
+    environment:
+      discovery.type: single-node
+      xpack.security.enabled: "false"
+      ES_JAVA_OPTS: ${ALPACA_ES_JAVA_OPTS:--Xms4g -Xmx4g}
+      http.cors.enabled: "true"
+      http.cors.allow-origin: ${ALPACA_ES_CORS_ALLOW_ORIGIN:-http://localhost:8080}
+      http.cors.allow-headers: ${ALPACA_ES_CORS_ALLOW_HEADERS:-X-Requested-With,Content-Type,Content-Length,Authorization}
+    ports:
+      - "${ALPACA_ELASTICSEARCH_PORT:-9200}:9200"
+    volumes:
+      - type: bind
+        source: ${ALPACA_ELASTICSEARCH_DATA_DIR:-./data/elasticsearch}
+        target: /usr/share/elasticsearch/data
+
+  elasticvue:
+    image: cars10/elasticvue:${ALPACA_ELASTICVUE_VERSION:-1.13.0}
+    pull_policy: always
+    depends_on:
+      - elasticsearch
+    environment:
+      ELASTICVUE_CLUSTERS: '[{"name":"alpaca-local","uri":"http://localhost:${ALPACA_ELASTICSEARCH_PORT:-9200}"}]'
+    ports:
+      - "${ALPACA_ELASTICVUE_PORT:-8080}:8080"
 
   api:
     build:
@@ -16,15 +47,16 @@ services:
     working_dir: /workspace
     command: ["uvicorn", "src.api:app", "--host", "0.0.0.0", "--port", "8000"]
     depends_on:
-      - quickwit
+      - postgres
+      - elasticsearch
     environment:
       ALPACA_DUMP_PATH: ${ALPACA_DUMP_PATH:-/mnt/input/latest-all.json.bz2}
       ALPACA_NER_TYPES_PATH: ${ALPACA_NER_TYPES_PATH:-}
       ALPACA_LABELS_DB_PATH: ${ALPACA_LABELS_DB_PATH:-/workspace/data/output/wikidata_labels.sqlite}
       ALPACA_BOW_OUTPUT_PATH: ${ALPACA_BOW_OUTPUT_PATH:-/workspace/data/output/bow_docs.jsonl.gz}
-      ALPACA_QUICKWIT_URL: ${ALPACA_QUICKWIT_URL:-http://quickwit:7280}
-      ALPACA_QUICKWIT_INDEX_ID: ${ALPACA_QUICKWIT_INDEX_ID:-wikidata_entities}
-      ALPACA_QUICKWIT_INDEX_CONFIG_PATH: ${ALPACA_QUICKWIT_INDEX_CONFIG_PATH:-/workspace/quickwit/wikidata-entities-index-config.json}
+      ALPACA_POSTGRES_DSN: ${ALPACA_POSTGRES_DSN:-postgresql://postgres@postgres:5432/alpaca}
+      ALPACA_ELASTICSEARCH_URL: ${ALPACA_ELASTICSEARCH_URL:-http://elasticsearch:9200}
+      ALPACA_ELASTICSEARCH_INDEX: ${ALPACA_ELASTICSEARCH_INDEX:-wikidata_entities}
     ports:
       - "${ALPACA_API_PORT:-8000}:8000"
     volumes:
@@ -42,8 +74,4 @@ services:
       - type: bind
         source: ./scripts
         target: /workspace/scripts
-        read_only: true
-      - type: bind
-        source: ./quickwit
-        target: /workspace/quickwit
         read_only: true
