--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   postgres:
+    container_name: alpaca-postgres
     image: postgres:${ALPACA_POSTGRES_VERSION:-18.1}
     pull_policy: always
     environment:
@@ -14,6 +15,7 @@ services:
         target: /var/lib/postgresql
 
   adminer:
+    container_name: alpaca-adminer
     image: adminer:${ALPACA_ADMINER_VERSION:-5}
     pull_policy: always
     depends_on:
@@ -24,6 +26,7 @@ services:
       - "${ALPACA_ADMINER_PORT:-8080}:8080"
 
   api:
+    container_name: alpaca-api
     build:
       context: .
     image: alpaca:latest
